# panll

./: .gitignore  ECOSYSTEM.scm  META.scm  README.adoc  STATE.scm  deno.json  package-lock.json  package.json  rescript.json  tailwind.config.js
public/: index.html
src/: App.res  Model.res  Msg.res  Update.res  View.res
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/bindings/: Tauri.res
src/components/: FeedbackOTron.res  PaneL.res  PaneN.res  PaneW.res  Vexometer.res
src/core/: AntiCrash.res  Contractiles.res  OrbitalSync.res
src/styles/: input.css
src/tea/: Tea.res  Tea_App.res  Tea_Cmd.res  Tea_Html.res  Tea_Render.res  Tea_Sub.res  Tea_Vdom.res
