# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "panll"
version = "0.0.1"
description = "PanLL eNSAID - Environment for NeSy-Agentic Integrated Development"
authors = ["hyperpolymath"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/panll"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
